--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -204,9 +204,11 @@
                     android:layout_height="0dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
+                    android:ellipsize="marquee"
                     android:gravity="center"
-                    android:lines="1"
+                    android:marqueeRepeatLimit="marquee_forever"
                     android:paddingRight="10dp"
+                    android:singleLine="true"
                     android:text="100M后"
                     android:textColor="#fff"
                     app:layout_heightPercent="78%h"
@@ -218,9 +220,11 @@
                     android:layout_height="0dp"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
+                    android:ellipsize="marquee"
                     android:gravity="center"
-                    android:lines="1"
+                    android:marqueeRepeatLimit="marquee_forever"
                     android:paddingRight="10dp"
+                    android:singleLine="true"
                     android:text="进入香港路"
                     android:textColor="#ddd"
                     app:layout_heightPercent="54%h"
