对接纯黑色主题中,没有其他更新,不要更新这个更新,更换主题出现bug

--- a/mobile/src/main/res/layout/content_l_weather.xml
+++ b/mobile/src/main/res/layout/content_l_weather.xml
@@ -15,6 +15,7 @@
         android:contentDescription="@string/app_name"
         android:scaleType="fitStart"
         android:src="@mipmap/n_weather_weizhi"
+        app:left_top_radius="10dp"
         app:right_top_radius="10dp" />
 
     <com.zhy.android.percent.support.PercentLinearLayout
