纯黑主题进行中

--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -24,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
                 android:gravity="center"
                 android:includeFontPadding="false"
                 android:lines="1"
