--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -39,6 +39,7 @@
                     android:id="@+id/tv_title1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:includeFontPadding="false"
@@ -154,6 +155,7 @@
                 android:id="@+id/tv_title2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:gravity="center"
                 android:includeFontPadding="false"
