--- a/mobile/src/main/res/layout/content_l_shadow10.xml
+++ b/mobile/src/main/res/layout/content_l_shadow10.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
+    android:background="@color/color_yellow"
     app:cardBackgroundColor="@android:color/transparent"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp"
